--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,10 +2,10 @@ server:
   port: 8090
 spring:
   datasource:
-    url: jdbc:mysql://mysql:3306/elasticsearch?useSSL=false
+    url: jdbc:mysql://localhost:3306/elasticsearch?useSSL=true
     username: root
     password: root
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
 logging:
   level:
     cn.itcast: debug
