--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,6 +6,12 @@ spring:
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
+  rabbitmq:
+    host: 101.35.51.125
+    port: 5672
+    username: root
+    password: root
+    virtual-host: /
 logging:
   level:
     cn.itcast: debug
